# slam_learn

./: .gitignore  CMakeLists.txt  README.md  data_mu.txt  install_pangolin.sh  pose_output.txt
cmake/: packages.cmake
config/: mapping.yaml
data/ch3/: gins.txt
data/ch7/: corner.pcd  icp_line_trans.pcd  icp_plane_trans.pcd  icp_plane_trans_lm.pcd  icp_trans.pcd  ndt_trans.pcd  surf.pcd
src/: CMakeLists.txt
src/common/: CMakeLists.txt  compare_func.hh  dataset_type.hh  eigen_types.hh  g2o_types.cc  g2o_types.hh  io_utils.cc  io_utils.hh  lidar_utils.hh  math_utils.hh  nav_state.hh  rosbag_io.cc  rosbag_io.hh
src/common/sensors/: gnss.hh  imu.hh  odom.hh  point_type.hh
src/common/timer/: timer.cc  timer.hh
src/common/timers/: timer.hh
src/ikd_Tree/: CMakeLists.txt  ikd_Tree.cc  ikd_Tree.hh
src/ikd_Tree/test/: ikd_tree_demo.cc
src/lidar_slam/ch3/: CMakeLists.txt  eskf.hpp  imu_integration.hh  static_imu_init.cc  static_imu_init.hh  utm_convert.cc  utm_convert.hh
src/lidar_slam/ch3/test/: test_eskf_gins.cc  test_imu_integration.cc
src/lidar_slam/ch4/: CMakeLists.txt  README.md  g2o_preintegration.cc  g2o_preintegration.hh  gins_pre_integ.cc  gins_pre_integ.hh  imu_preintegration.cc  imu_preintegration.hh
src/lidar_slam/ch4/test/: test_gins_pre_integ.cc  test_preintegration.cc
src/lidar_slam/ch5/: CMakeLists.txt  bfnn.cc  bfnn.hh  gridnn.hpp  kdtree.cc  kdtree.hh  octo_tree.cc  octo_tree.hh  pcd_to_bird_eye.cc  scan_to_range_image.cc
src/lidar_slam/ch5/test/: test_nn.cc
src/lidar_slam/ch6/: icp_2d.cc  icp_2d.hh  lidar_2d_utils.cc  lidar_2d_utils.hh
src/lidar_slam/ch6/test/: test_2dlidar_io.cc
src/lidar_slam/ch7/: CMakeLists.txt  direct_ndt_lo.cc  direct_ndt_lo.hh  icp_3d.cc  icp_3d.hh  incremental_ndt_lo.cc  incremental_ndt_lo.hh  ndt_3d.cc  ndt_3d.hh  ndt_inc.cc  ndt_inc.hh
src/lidar_slam/ch7/loam-like/: feature_extraction.cc  feature_extraction.hh  loam_like_odom.cc  loam_like_odom.hh
src/lidar_slam/ch7/loosely_coupled_lio/: cloud_convert.cc  cloud_convert.hh  loosely_lio.cc  loosely_lio.hh  measure_sync.cc  measure_sync.hh
src/lidar_slam/ch7/test/: test_feature_extraction.cc  test_icp.cc  test_inc_ndt.cc  test_loam_odom.cc  test_loosely_lio.cc  test_ndt_lo.cc
src/lidar_slam/ch8/: CMakeLists.txt  ieskf.hpp
src/lidar_slam/ch8/lio-iekf/: lio_iekf.cc  lio_iekf.hh
src/lidar_slam/ch8/lio-preinteg/: lio_preinteg.cc  lio_preinteg.hh
src/lidar_slam/ch8/test/: test_lio_iekf.cc
src/lidar_slam/ch9/: CMakeLists.txt  dump_map.cc  frontend.cc  frontend.hh  keyframe.cc  keyframe.hh  loopclosure.cc  loopclosure.hh  optimization.cc  optimization.hh  split_map.cc
src/lidar_slam/ch9/test/: run_frontend.cc  run_loopclosure.cc  run_mapping.cc  run_optimization.cc
src/tools/: CMakeLists.txt  pcl_map_viewer.hh
src/tools/pointcloud_convert/: packets_parser.cc  packets_parser.h  velodyne_config.h  velodyne_convertor.cc  velodyne_convertor.h
src/tools/ui/: pangolin_window.cc  pangolin_window.hh  pangolin_window_impl.cc  pangolin_window_impl.hh  ui_car.cc  ui_car.hh  ui_cloud.cc  ui_cloud.hh  ui_test.cc  ui_traj.cc  ui_traj.hh
src/v_slam/ch3/: CMakeLists.txt  CurveFitting.cc  README.md
src/v_slam/ch3/backend/: backend.hh  edge.cc  edge.hh  problem.cc  problem.hh  vertex.cc  vertex.hh
src/v_slam/ch4/: CMakeLists.txt  README.md  hessian_nullspace_test.cc
src/v_slam/ch5/: README.md
src/v_slam/ch5/code_ba_schur/backend/: edge_imu.cc  edge_imu.hh  edge_prior.cc  edge_prior.hh  edge_reprojection.cc  edge_reprojection.hh  imu_preintegration.cc  imu_preintegration.hh  loss_function.cc  loss_function.hh  vertex.cc  vertex_inverse_depth.hh  vertex_motion.hh  vertex_point_xyz.hh  vertex_pose.cc  vertex_pose.hh
src/v_slam/ch6/: CMakeLists.txt  README.md  triangulate.cc
src/v_slam/ch7_vo1/: CMakeLists.txt  README.md  orb_cv.cc  pose_estimation_2d2d.cc  pose_estimation_3d2d.cc  pose_estimation_3d3d.cc  triangulation.cc
src/v_slam/ch8_vo2/: CMakeLists.txt  README.md  direct_method.cc  optical_flow.cc
src/v_slam/vins_init/: CMakeLists.txt  README.md
src/v_slam/vins_init/config/: euroc_config.yaml  sim_config.yaml
src/v_slam/vins_init/data/: cam_pose.txt  imu_int_pose_noise.txt  imu_pose_noise.txt
src/v_slam/vins_init/include/: System.h  estimator.h  feature_manager.h  feature_tracker.h  parameters.h
src/v_slam/vins_init/include/backend/: backend.h  edge.h  edge_imu.h  edge_prior.h  edge_reprojection.h  imu_integration.h  loss_function.h  problem.h  vertex.h  vertex_inverse_depth.h  vertex_point_xyz.h  vertex_pose.h  vertex_speedbias.h
src/v_slam/vins_init/include/camodocal/calib/: CameraCalibration.h
src/v_slam/vins_init/include/camodocal/camera_models/: CameraFactory.h  CataCamera.h  CostFunctionFactory.h  EquidistantCamera.h  PinholeCamera.h  ScaramuzzaCamera.h
src/v_slam/vins_init/include/camodocal/chessboard/: Chessboard.h  ChessboardCorner.h  ChessboardQuad.h
src/v_slam/vins_init/include/camodocal/gpl/: EigenUtils.h
src/v_slam/vins_init/src/: System.cpp  estimator.cpp  feature_manager.cpp  feature_tracker.cpp  feature_tracker_parameters.cpp  parameters.cpp
src/v_slam/vins_init/src/backend/: edge.cc  edge_imu.cc  edge_prior.cpp  edge_reprojection.cc  imu_integration.cc  loss_function.cc  problem.cc  vertex.cc  vertex_pose.cc
src/v_slam/vins_init/src/camera_models/calib/: CameraCalibration.cc
src/v_slam/vins_init/src/camera_models/camera_models/: Camera.cc  CameraFactory.cc  CataCamera.cc  CostFunctionFactory.cc  EquidistantCamera.cc  PinholeCamera.cc  ScaramuzzaCamera.cc
src/v_slam/vins_init/src/camera_models/chessboard/: Chessboard.cc
src/v_slam/vins_init/src/camera_models/gpl/: EigenQuaternionParameterization.cc  gpl.cc
src/v_slam/vins_init/src/camera_models/sparse_graph/: Transform.cc
src/v_slam/vins_init/src/initial/: initial_aligment.cpp  initial_ex_rotation.cpp  initial_sfm.cpp  solve_5pts.cpp
src/v_slam/vins_init/src/utility/: utility.cpp
src/v_slam/vins_init/test/: CurveFitting.cpp  run_euroc.cpp  run_sim.cpp
