add_subdirectory(common)
# add_subdirectory(ch2)
add_subdirectory(lidar_slam/ch3)
add_subdirectory(lidar_slam/ch4)
add_subdirectory(lidar_slam/ch5)
add_subdirectory(lidar_slam/ch7)
add_subdirectory(lidar_slam/ch8)
add_subdirectory(lidar_slam/ch9)
add_subdirectory(v_slam/ch7_vo1)
add_subdirectory(v_slam/ch8_vo2)
# add_subdirectory(ch6)
# add_subdirectory(ch9)
# add_subdirectory(ch10)

add_subdirectory(tools)